tests/snapshots/conformance__n_number_with_alpha.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[1.2a-3]
stdout --- 
<empty>
stderr --- 
error: unexpected character `a`. expected start of a json value
 --> stdin:1:5
  |
1 | [1.2a-3]
  |     ^
